Fix invisible nested menu items #12847

--- a/client/src/components/Sidebar/SidebarPanel.scss
+++ b/client/src/components/Sidebar/SidebarPanel.scss
@@ -16,7 +16,6 @@
   z-index: 400;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
 
   @include media-breakpoint-up(sm) {
     z-index: var(--z-index);
@@ -31,6 +30,10 @@
   &--visible {
     visibility: visible;
     box-shadow: 2px 0 2px theme('colors.black-35');
+  }
+
+  .sidebar-page-explorer-item & {
+    overflow: hidden;
   }
 
   // Showing the submenu options panel in mobile mode
